--- a/css/nav-dropdowns.css
+++ b/css/nav-dropdowns.css
@@ -7,7 +7,7 @@
     left: 0.5rem;
     gap: 0.6rem;
     align-items: center;
-    z-index: 5;
+    z-index: 10;
 }
 
 .dropdown {
@@ -45,7 +45,7 @@
     background: var(--color-bg-default);
     box-shadow: 0 8px 24px rgba(0, 0, 0, .2);
     border-radius: 6px;
-    z-index: 10;
+    z-index: 50;
     /* Hide but allow transitions */
     visibility: hidden;
     opacity: 0;
